Fix button alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
 /* Fix button text size */
 .bs .btn-icon {
     font-size: 0.875rem;
-    line-height: var(--bs-btn-line-height);
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
